<resources>
    <string name="app_name">Saude</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="lista_doutor_fragment_label">Doutor</string>
    <string name="novo_doutor_fragment_label">Novo doutor</string>
    <string name="edita_doutor_fragment_label">Editar doutor</string>
    <string name="elimina_doutor_fragment_label">Eliminar doutor?</string>

    <string name="lista_consultas_fragment_label">Consultas</string>
    <string name="nova_consulta_fragment_label">Nova Consulta</string>
    <string name="edita_consulta_fragment_label">Edita Cuidado</string>
    <string name="elimina_consulta_fragment_label">Eliminar Cuidado?</string>


    <string name="novo_doutor">Novo doutor</string>
    <string name="alterar_doutor">Alterar doutor</string>
    <string name="eliminar_doutor">Eliminar doutor</string>

    <string name="nova_consulta">Nova Consulta</string>
    <string name="alterar_consulta">Alterar Consulta</string>
    <string name="eliminar_consulta">Eliminar Consulta</string>


    <string name="titulo">Título</string>
    <string name="doutor">Nome</string>
    <string name="data_de_nascimento">Data de Nascimento</string>
    <string name="especialidade">Especialidade</string>
    <string name="consultas">Consultas</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="versao">Doutores v. 1.0</string>
    <string name="preencha_nome">Preencha o nome</string>
    <string name="preencha_dataNascimento">Preencha a data de nascimento</string>
    <string name="preencha_especialidade">Preencha a especialidade</string>
    <string name="erro_inserir_doutor">Erro ao inserir doutor</string>
    <string name="erro_alterar_doutor">Erro ao alterar doutor</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="doutor_guardado_sucesso">Doutor guardado com sucesso</string>
    <string name="erro_eliminar_doutor">Erro ao eliminar doutor</string>
    <string name="doutor_eliminado_sucesso">Doutor eliminado com sucesso</string>


</resources>