<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditaDoutorFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextDoutorEditaNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/doutor"
        android:inputType="textLongMessage|textAutoComplete" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextDoutorEditaDataNascimento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margem_campo"
        android:hint="@string/data_de_nascimento"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextDoutorEditarEspecialidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margem_campo"
        android:hint="@string/especialidade"/>


    </LinearLayout>
