<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EliminaDoutorFragment" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margem_ecra"
        android:layout_marginLeft="@dimen/margem_ecra"
        android:layout_marginTop="@dimen/margem_ecra"
        android:layout_marginEnd="@dimen/margem_ecra"
        android:layout_marginRight="@dimen/margem_ecra"
        android:text="@string/doutor"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/cor_prime" />

    <TextView
        android:id="@+id/textViewNomeDoutor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margem_ecra"
        android:layout_marginLeft="@dimen/margem_ecra"
        android:layout_marginTop="@dimen/margem_campo"
        android:layout_marginEnd="@dimen/margem_ecra"
        android:layout_marginRight="@dimen/margem_ecra"
        tools:text="Tiago"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margem_ecra"
        android:layout_marginLeft="@dimen/margem_ecra"
        android:layout_marginTop="@dimen/margem_campo"
        android:layout_marginEnd="@dimen/margem_ecra"
        android:layout_marginRight="@dimen/margem_ecra"
        android:text="@string/data_de_nascimento"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/cor_prime" />

    <TextView
        android:id="@+id/textViewDataNascimento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margem_ecra"
        android:layout_marginLeft="@dimen/margem_ecra"
        android:layout_marginTop="@dimen/margem_campo"
        android:layout_marginEnd="@dimen/margem_ecra"
        android:layout_marginRight="@dimen/margem_ecra"
        tools:text="27-02-2000"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margem_ecra"
        android:layout_marginLeft="@dimen/margem_ecra"
        android:layout_marginTop="@dimen/margem_campo"
        android:layout_marginEnd="@dimen/margem_ecra"
        android:layout_marginRight="@dimen/margem_ecra"
        android:text="@string/especialidade"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/cor_prime" />

    <TextView
        android:id="@+id/textViewEspecialidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margem_ecra"
        android:layout_marginLeft="@dimen/margem_ecra"
        android:layout_marginTop="@dimen/margem_campo"
        android:layout_marginEnd="@dimen/margem_ecra"
        android:layout_marginRight="@dimen/margem_ecra"
        tools:text="Pediatria"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


</LinearLayout>